Fix paste text color without syntax
The default foreground color on paste.rs is black. However since the
undead-pasters theme adds a dark background color, this is hard to read.

To solve this the foreground color of the `body` is now always set to
the foreground color specified in the `:root` variables.

--- a/undead-pasters.css
+++ b/undead-pasters.css
@@ -15,6 +15,7 @@
 html,
 body > pre {
   background-color: var(--bg-color) !important;
+  color: var(--fg-color) !important;
 }
 
 /* SYNTAX */
